--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.meny {
+/*.meny {
     display: none;
     padding: 20px;
     overflow: auto;
@@ -24,7 +24,7 @@
     margin-right: 5px;
     color: rgba( 255, 255, 255, 0.2 );
     }
-
+*/
 /**
  * Hint graphic that appears while menu is inactive
  */
