updated menu css class to exclude underscores for links of files

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@
 /**
  * Hint graphic that appears while menu is inactive
  */
+  
+.meny a {text-decoration:none;}
+ 
+ 
 .meny-arrow {
     position: absolute;
     z-index: 10;
