--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,8 @@
  * Main contents area
  */
 .contents {
-    background: #eee;
-    padding: 20px 40px;
+   /* background: #eee;
+    padding: 20px 40px;*/
     width: 100%;
     height: 100%;
     overflow-y: auto;
