--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,11 @@
     display: none;
     padding: 20px;
     overflow: auto;
-    background: #333;
-    color: #eee;
+   /* background: #333;
+    color: #eee;*/
+    background-image:url('../images/background.png');
+	background-repeat: repeat;
+
 
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
