--- a/css/style.css
+++ b/css/style.css
@@ -93,16 +93,16 @@
    /* background: #eee;
     padding: 20px 40px;*/
     width: 100%;
-    height: 100%;
+    height: 100%;/*
     overflow-y: auto;
 
     -webkit-overflow-scrolling: touch;
 
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
-               box-sizing: border-box;
+               box-sizing: border-box;*/
 }
-
+/*
 .contents>article {
     max-width: 400px;
     }
@@ -125,7 +125,7 @@
     position: absolute;
     bottom: 20px;
     }
-
+*/
 
 
 
