--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*****************************SIDE MENU SECTION*****************/
 .meny {
     display: none;
-    padding: 20px;
+   /* padding: 20px;*/
     overflow: auto;
    /* background: #333;
     color: #eee;*/
@@ -91,7 +91,7 @@
  */
 .contents {
    /* background: #eee;
-    padding: 20px 40px;*/
+    padding: 20px 40px;
     width: 100%;
     height: 100%;/*
     overflow-y: auto;
