removed more padding

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
     width: 200px;
     list-style: none;
     font-size: 20px;
-    padding: 3px 10px;
+    /*padding: 3px 10px;*/
     }
 .meny ul li:before {
     content: '-';
