--- a/css/style.css
+++ b/css/style.css
@@ -90,17 +90,8 @@
  * Main contents area
  */
 .contents {
-   /* background: #eee;
-    padding: 20px 40px;
     width: 100%;
-    height: 100%;/*
-    overflow-y: auto;
-
-    -webkit-overflow-scrolling: touch;
-
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-               box-sizing: border-box;*/
+    height: 100%;
 }
 /*
 .contents>article {
