--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /*****************************SIDE MENU SECTION*****************/
-/*.meny {
+.meny {
     display: none;
    padding: 20px;
     overflow: auto;
@@ -25,13 +25,13 @@
     content: '-';
     margin-right: 5px;
     color: rgba( 255, 255, 255, 0.2 );
-    }*/
+    }
 
 /**
  * Hint graphic that appears while menu is inactive
  */
 
-  /*
+  
 .meny a 
 {
 	text-decoration:none;
@@ -84,7 +84,7 @@
 		        transition: opacity 0.2s ease;
 			}
 
-*/
+
 
 /**
  * Main contents area
