removed menu arrow

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
 	text-decoration:none;
 }
  
- 
+ /*
 .meny-arrow {
     position: absolute;
     z-index: 10;
@@ -83,7 +83,7 @@
 		        transition: opacity 0.2s ease;
 			}
 
-
+*/
 
 /**
  * Main contents area
