aws s3 authentication to play videos test

--- a/includes/javascript_includes.html
+++ b/includes/javascript_includes.html
@@ -4,6 +4,6 @@
 <script type="text/javascript" src="includes/jquery-1.8.0.js" language="javascript"></script>
 <script type="text/javascript" src="includes/jquery.MultiFile.js" language="javascript"></script>
 <script type="text/javascript" src="includes/submitenter.js" language="javascript"></script>
-
+<script type="text/javascript" src="includes/amazon.js" language="javascript"></script>
 
 
