--- a/css/style.css
+++ b/css/style.css
@@ -391,7 +391,7 @@ p
 /*Code for login boxes */
 input[type="text"]
 {
-	font-size: 15;
+	font-size: 15px;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	height: 30px;
@@ -399,7 +399,7 @@ input[type="text"]
 }
 input[type="password"]
 {
-	font-size: 15;
+	font-size: 15px;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	height: 30px;
@@ -442,7 +442,7 @@ ul#navigation li a {
     -webkit-box-shadow: 0px 4px 3px #000;
     */
     opacity: 0.6;
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=60);
+    /*filter:progid:DXImageTransform.Microsoft.Alpha(opacity=60);*/
 }
 ul#navigation .home a{
     background-image: url(../images/home.png);
