--- a/includes/loggedin.html
+++ b/includes/loggedin.html
@@ -33,7 +33,7 @@
 	    // init the FB JS SDK
 	    FB.init({
 	      appId      : '464392090269325', // App ID from the App Dashboard
-	      channelUrl : '//www.hawkitics.com/mytrive/live/includes/channel.html', // Channel File for x-domain communication
+	      channelUrl : '//www.mytrive.com/includes/channel.html', // Channel File for x-domain communication
 	      status     : true, // check the login status upon init?
 	      cookie     : true, // set sessions cookies to allow your server to access the session?
 	      xfbml      : true  // parse XFBML tags on this page?
