moment of silence

--- a/includes/loggedout.html
+++ b/includes/loggedout.html
@@ -14,6 +14,11 @@
 
 </HEAD>
 <BODY>
+		<script src="http://www.causes.com/moment_of_silence.js">
+			showText: true;  
+			text: 'Find out how you can stay involved.'; 
+			url: 'http://causes.com/momentforsandyhook'; 
+		</script>
 			<div id="bluebackground"></div>
 			<div id="all-container">
 			<div id="head-container">
