--- a/css/redesign.css
+++ b/css/redesign.css
@@ -33,39 +33,42 @@ body
 	background: black url(../images/redesign_background.jpg) no-repeat center top;
 }
 
-
+nav ul form
+{
+	margin-top: -15px;
+}
 nav ul li input
 {
 	width: 100px;
 	height: 20px;	
 	float: right;
 
-	-webkit-border-top-left-radius: 10px;
-	-khtml-border-radius-topleft: 10px;
-	-moz-border-radius-topleft: 10px;
-	border-top-left-radius: 10px;
+	-webkit-border-top-left-radius: 5px;
+	-khtml-border-radius-topleft: 5px;
+	-moz-border-radius-topleft: 5px;
+	border-top-left-radius: 5px;
 	/*Rount top right corner*/
-	-webkit-border-top-right-radius: 10px;
-	-khtml-border-radius-topright: 10px;
-	-moz-border-radius-topright: 10px;
-	border-top-right-radius: 10px;	
+	-webkit-border-top-right-radius: 5px;
+	-khtml-border-radius-topright: 5px;
+	-moz-border-radius-topright: 5px;
+	border-top-right-radius: 5px;	
 	/*Bottom-left-corner*/
-	-webkit-border-bottom-left-radius: 10px;
-	-khtml-border-radius-bottomleft: 10px;	
-	-moz-border-radius-bottomleft: 10px;
-	border-bottom-left-radius: 10px;
+	-webkit-border-bottom-left-radius: 5px;
+	-khtml-border-radius-bottomleft: 5px;	
+	-moz-border-radius-bottomleft: 5px;
+	border-bottom-left-radius: 5px;
 	/*Bottom-right-corner*/
-	-webkit-border-bottom-right-radius: 10px;
-	-khtml-border-radius-bottomright: 10px;	
-	-moz-border-radius-bottomright: 10px;
-	border-bottom-right-radius: 10px;
+	-webkit-border-bottom-right-radius: 5px;
+	-khtml-border-radius-bottomright: 5px;	
+	-moz-border-radius-bottomright: 5px;
+	border-bottom-right-radius: 5px;
 }
 
 
 nav ul
 {
 	list-style-type: none;
-	margin-left: 70%;
+	margin-left: 30%;
 	margin-top: 15px;
 
 
@@ -73,6 +76,7 @@ nav ul
 nav ul li
 {
 	display: inline;
+	padding: 50px;
 
 }
 
