--- a/css/redesign.css
+++ b/css/redesign.css
@@ -5,20 +5,20 @@
 	padding: 0;
 }
 
-nav
+#nav-banner
 {
 	top: 0px;
 	left: 0px;
+	
 	background-color: rgba(0, 0, 0, .6);
 	height: 50px;	
 	width: 100%;
 	position: fixed;
 }
 
-nav a #logo
+nav
 {
-	margin-top: -10px;
-	float: left;
+	margin-top: -15px;	
 }
 
 a
@@ -33,35 +33,19 @@ body
 	background: black url(../images/redesign_background.jpg) no-repeat center top;
 }
 
-nav ul form
+nav form
 {
-	margin-top: -15px;
+	margin-top: -40px;
+	margin-right: 3%;
 }
-nav ul li input
+
+nav input
 {
 	width: 100px;
+	padding: 5px;
 	height: 20px;	
 	float: right;
-
-	-webkit-border-top-left-radius: 5px;
-	-khtml-border-radius-topleft: 5px;
-	-moz-border-radius-topleft: 5px;
-	border-top-left-radius: 5px;
-	/*Rount top right corner*/
-	-webkit-border-top-right-radius: 5px;
-	-khtml-border-radius-topright: 5px;
-	-moz-border-radius-topright: 5px;
-	border-top-right-radius: 5px;	
-	/*Bottom-left-corner*/
-	-webkit-border-bottom-left-radius: 5px;
-	-khtml-border-radius-bottomleft: 5px;	
-	-moz-border-radius-bottomleft: 5px;
-	border-bottom-left-radius: 5px;
-	/*Bottom-right-corner*/
-	-webkit-border-bottom-right-radius: 5px;
-	-khtml-border-radius-bottomright: 5px;	
-	-moz-border-radius-bottomright: 5px;
-	border-bottom-right-radius: 5px;
+	margin-right: 10px;
 }
 
 
@@ -69,14 +53,14 @@ nav ul
 {
 	list-style-type: none;
 	margin-left: 30%;
-	margin-top: 15px;
+	margin-top: -60px;
 
 
 }
 nav ul li
 {
-	display: inline;
-	padding: 50px;
+	display: inline-block;
+	padding: 20px;
 
 }
 
@@ -134,7 +118,7 @@ section
 
 	background-color: rgba(0, 0, 0, .6);
 	width: 300px;
-	margin-right: 200px;
+	margin-right: 20%;
 	margin-top: 200px;
 	padding: 10 10 10 10;
 	
@@ -159,4 +143,39 @@ section
 	-moz-border-radius-bottomright: 10px;
 	border-bottom-right-radius: 10px;
 }
+
+
+@media screen {
+	body {
+		width: 100%;
+		
+	}
+}
+@media all and(max-width: 800px) and (min-width: 600px)
+{
+	nav ul{
+		margin-left: 20%;
+	}
+
+}
+
+@media all and (max-width: 600px) and (min-width: 400px)
+{
+	/*body{
+		background: pink;
+	}
+	*/
+	nav ul{
+		display: none;
+	}
+	section
+	{
+		width: 90%;
+		margin-right: 5%;
+		margin-left: 5%;
+	}
+	
+	
+}
+
 
