--- a/css/redesign.css
+++ b/css/redesign.css
@@ -31,6 +31,7 @@ a
 body
 {
 	background: black url(../images/redesign_background.jpg) no-repeat center top;
+	
 }
 
 nav form
@@ -146,6 +147,19 @@ section
 }
 
 
+article
+{
+	padding-top: 1000px;
+	padding-bottom: 500px;
+	margin-right: 30%;
+	margin-left: 30%;
+	color: white;
+}
+
+article p
+{
+	text-align: justify;
+}
 @media screen {
 	body {
 		width: 100%;
@@ -157,6 +171,7 @@ section
 	nav ul{
 		margin-left: 20%;
 	}
+
 
 }
 
@@ -176,7 +191,11 @@ section
 		margin-left: 5%;
 	}
 	
-	
+	article
+	{
+		margin-right: 5%;
+		margin-left: 5%;	
+	}
 }
 
 
