--- a/css/design.css
+++ b/css/design.css
@@ -77,7 +77,7 @@ body
 	color: black;
 }
 
-section#content
+#content
 {
 	border-style: none solid none solid;
 	background-color: white;
@@ -90,6 +90,8 @@ section#content
 	padding: 10px;
 	float: left;
 }
+
+
 
 #profile_content
 {
@@ -108,8 +110,22 @@ section#content
 		
 }
 
+#file_drop
+{
+	width: 69%;
+    height:100px;
+    line-height:100px;
+    border:3px dashed #CCC;
+
+    font-family:Verdana;
+    text-align:center;
+  	float: right;
+
+}
+
 #file_content
 {
+	padding-top: 10px;
 	width: 70%;
 	float: right;
 	height: 50%;
