--- a/css/redesign.css
+++ b/css/redesign.css
@@ -129,7 +129,10 @@ section
 	width: 300px;
 	margin-right: 20%;
 	margin-top: -800px;
-	padding: 10 10 10 10;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
+	padding-left: 10px;
 	
 	float: right;
 	-webkit-border-top-left-radius: 10px;
