--- a/css/design.css
+++ b/css/design.css
@@ -105,6 +105,7 @@ body
 	margin-top: 50px;
 	padding: 10px;
 	float: left;
+	width: 75%;
 }
 
 
@@ -151,7 +152,15 @@ body
 /*	-webkit-column-count: 2;*/
 }
 
-
+#settings_edit
+{
+	margin-top: 10px;
+	padding: 10 10 10 10;
+}
+#settings_edit input
+{
+	border: 1px black;
+}
 /*
 #file_content img
 {
