--- a/css/design.css
+++ b/css/design.css
@@ -159,7 +159,10 @@ body
 }
 #settings_edit input
 {
-	border: 1px black;
+	border-style: solid;
+	border-width: 2px;
+	border-color: black;
+	width: 20em;
 }
 /*
 #file_content img
