show profile pictures with usernames for friends, added the ability to change the background image

--- a/css/design.css
+++ b/css/design.css
@@ -86,7 +86,7 @@ a
 
 body
 {
-	background-image:url('../images/jon@mytrive_background.jpg');
+	/*background-image:url('../images/jon@mytrive_background.jpg');*/
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-color: darkgrey;
