--- a/css/design.css
+++ b/css/design.css
@@ -245,12 +245,13 @@ body
 	width: 20%;
 	height: 20%;
 }
-
+/*
 #friend_files img
 {
 	width: 20%;
 	height: 20%;
 }
+*/
 #friend_content img
 {
 	width: 20%;
