--- a/css/design.css
+++ b/css/design.css
@@ -259,7 +259,7 @@ body
 	width: 20%;
 	height: 20%;
 }
-
+/*
 #filters
 {
 	background-color: rgba(0, 0, 0, .6);
@@ -292,7 +292,7 @@ body
 {
 	width: 90px;
 }
-
+*/
 
 /*Media Queries below for nice responsive design stuffs*/
 /*
